refactor(cms): FORGE-588 modernize Java source for JDK 21 compatibility
Replace Collectors.toList() with Stream.toList() (Java 16+).
Replace deprecated new Locale(String) with Locale.of(String) (Java 19+).
Remove org.apache.commons.lang3.Strings (added in commons-lang 3.15, risky
transitive dep) in favour of plain String.equals() — operands are non-null.

(co-authored with Claude Code)